package refactoring_guru.abstract_factory.example.checkboxes;

/**
 * EN: Checkboxes is the second product family. It has the same variants as
 * buttons.
 *
 * RU: Чекбоксы — это второе семейство продуктов. Оно имеет те же вариации, что
 * и кнопки.
 */
public interface Checkbox {
}
